fix: Fix profile image styling on IOS.

--- a/web-application/client/components/posts/Post/Post.css
+++ b/web-application/client/components/posts/Post/Post.css
@@ -30,6 +30,17 @@
     width: 100%;
     height: 100%;
 }
+
+/* These are necessary to keep the image properly sized on IOS. */
+.post .post__header .post__poster-image .profile-image img {
+    width: 40px;
+}
+.post.shared .post__header .post__poster-image .profile-image img {
+    width: 40px;
+    border-radius: 10000px;
+}
+/* End IOS fixes. */
+
 .post .post__header .post__details {
     padding: 4px 10px;
 }
